--- a/index.html
+++ b/index.html
@@ -17,11 +17,25 @@
         <button class="search-btn">
           <img src="assets/images.jpg" alt="Search Icon">
         </button>
+        <button id="backButton" style="display: none;">Back</button>
+      </div>
+      <div class="buttons">
+        <div class="dropdown">
+          <button class="type-btn">Types</button>
+          <div class="dropdown-content">
+            <a href="#">First Generation</a>
+            <a href="#">Second Generation</a>
+            <a href="#">Third Generation</a>
+          </div>
+          <div class="pokemon-details-container"></div>
+        </div>
+        <button class="capture-btn">Capture</button>
+        <button class="unseen-btn">Unseen</button>
+        
       </div>
     </nav>
   </header>
   <main></main>
-
   <script src="poke.js"></script>
 </body>
 </html>
