--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="buttons">
         <div class="dropdown">
-          <button class="type-btn">Types</button>
+          <button class="type-btn">Generation</button>
           <div class="dropdown-content">
             <a href="#">First Generation</a>
             <a href="#">Second Generation</a>
